manifests/nginx-ingress.yaml
# nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: alejandrotello.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend # Name of your nginx Service
                port:
                  number: 3000
          - path: /backend/
            pathType: Prefix
            backend:
              service:
                name: backend  # Name of your backend Service
                port:
                  number: 5000
